--- a/contrib/jabber/ChangeLog
+++ b/contrib/jabber/ChangeLog
@@ -1,3 +1,6 @@
+4.1
+	+ Set version to 4.1
+	+ Remove checkUsersode()
 4.0.1
 	+ Include CA in custom certificate to avoid chain of certification errors
 4.0
